Messed up somwehre in Javascript

--- a/startup_project/index.html
+++ b/startup_project/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+    <meta charset="UTF-8">
+    <script src = "doStuff.js"></script>
     </head>
-    <body>
+    <body onload="displayResult()">
+
         <h2>XML Demo - Final Fantasy Characters</h2>
 
         <p id="demo">
 
         </p>
-
-        <script src="doStuff.js"></script>
     </body>
 </html>
