Fixed issue with xmls path - Add more function

--- a/startup_project/index.html
+++ b/startup_project/index.html
@@ -2,12 +2,18 @@
 <html>
     <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <script src = "doStuff.js"></script>
     </head>
     <body onload="displayResult()">
+            <h1>Final Fantasy Characters</h1>
 
-        <h2>XML Demo - Final Fantasy Characters</h2>
-
+        <div class = "fanart">
+            <img src="Cloud.jpeg">
+            <img src="Squall.jpg">
+            <img src="Zidane.jpg">
+            <img src="tidus.jpeg">
+        </div>
         <p id="demo">
 
         </p>
