Change image directory in charImages and figure cr

--- a/startup_project/index.html
+++ b/startup_project/index.html
@@ -5,14 +5,10 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script src = "doStuff.js"></script>
     </head>
-    <body onload="displayResult()">
+    <body onload="displayResult(), displayImages()">
             <h1>Final Fantasy Characters</h1>
 
         <div class = "fanart">
-            <img src="Cloud.jpeg">
-            <img src="Squall.jpg">
-            <img src="Zidane.jpg">
-            <img src="tidus.jpeg">
         </div>
         <p id="demo">
 
