--- a/startup_project/index.html
+++ b/startup_project/index.html
@@ -3,12 +3,12 @@
     <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <script src = "doStuff.js"></script>
+    <script defer src = "doStuff.js"></script>
     </head>
     <body onload="displayResult(), displayImages()">
             <h1>Final Fantasy Characters</h1>
 
-        <div class = "fanart">
+        <div id= "fanArt">
         </div>
         <p id="demo">
 
