Managed to create character bio functionallity

--- a/startup_project/index.html
+++ b/startup_project/index.html
@@ -7,11 +7,16 @@
     </head>
     <body onload="displayResult(), displayImages()">
             <h1>Final Fantasy Characters</h1>
-
+            <div><p id="demo"></p></div>
         <div id= "fanArt">
         </div>
-        <p id="demo">
-
-        </p>
+        <div class="charBio">
+            <h3>
+                Select any character portrait to display information about the character!
+            </h3>
+            <p id="charText">
+                
+            </p>
+        </div>
     </body>
 </html>
