--- a/startup_project/index.html
+++ b/startup_project/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script defer src = "doStuff.js"></script>
+	
+<link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
+
     </head>
     <body onload="displayResult(), displayImages()">
             <h1>Final Fantasy Characters</h1>
             <div><p id="demo"></p></div>
         <div id= "fanArt">
         </div>
-        <div class="charBio">
+        <div style="position:fixed;" class="charBio">
             <h3>
                 Select any character portrait to display information about the character!
             </h3>
